--- a/src/View_Controller/Main Screen.fxml
+++ b/src/View_Controller/Main Screen.fxml
@@ -63,7 +63,7 @@
             <Font size="18.0" />
           </font>
         </Label>
-            <Pane layoutX="676.0" layoutY="140.0" prefHeight="358.0" prefWidth="547.0" style="-fx-border-color: black; -fx-border-style: round;">
+            <Pane layoutX="676.0" layoutY="140.0" prefHeight="358.0" prefWidth="547.0" style="-fx-border-color: black;">
                <children>
                   <TextField layoutX="292.0" layoutY="46.0" />
                   <Label alignment="CENTER" layoutX="60.0" layoutY="45.0" style="&#10;" text="Products" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
@@ -81,21 +81,21 @@
                   <Button layoutX="241.0" layoutY="46.0" mnemonicParsing="false" text="Search" />
                   <TableView fx:id="productsTable" layoutX="60.0" layoutY="79.0" prefHeight="200.0" prefWidth="381.0">
                      <columns>
-                        <TableColumn fx:id="tableProductsID" prefWidth="75.0" text="Product ID"/>
-                        <TableColumn fx:id="tableProductsName" prefWidth="75.0" text="Product Name"/>
-                        <TableColumn fx:id="tableProductsInv" prefWidth="75.0" text="Inventory Level"/>
-                        <TableColumn fx:id="tableProductsPrice" prefWidth="75.0" text="Price per Unit"/>
+                        <TableColumn fx:id="tableProductsID" prefWidth="75.0" text="Product ID" />
+                        <TableColumn fx:id="tableProductsName" prefWidth="75.0" text="Product Name" />
+                        <TableColumn fx:id="tableProductsInv" prefWidth="75.0" text="Inventory Level" />
+                        <TableColumn fx:id="tableProductsPrice" prefWidth="75.0" text="Price per Unit" />
                      </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                       <sortOrder>
-                          <fx:reference source="tableProductsID"/>
+                          <fx:reference source="tableProductsID" />
                       </sortOrder>
                   </TableView>
                </children>
             </Pane>
-            <Pane layoutX="62.0" layoutY="140.0" prefHeight="358.0" prefWidth="547.0" style="-fx-border-color: black; -fx-border-style: round;">
+            <Pane layoutX="62.0" layoutY="140.0" prefHeight="358.0" prefWidth="547.0" style="-fx-border-color: black;">
                <children>
                   <TextField layoutX="292.0" layoutY="46.0" />
                   <Label alignment="CENTER" layoutX="60.0" layoutY="45.0" style="&#10;" text="Parts" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
@@ -105,7 +105,7 @@
                   </Label>
                   <ButtonBar layoutX="176.0" layoutY="272.0" prefHeight="40.0" prefWidth="200.0">
                      <buttons>
-                        <Button mnemonicParsing="false" onAction="#addPartButtAction" text="Add" />
+                        <Button fx:id="addPartButton" mnemonicParsing="false" onAction="#addPartButtAction" text="Add" />
                         <Button layoutX="135.0" layoutY="18.0" mnemonicParsing="false" onAction="#modPartButtAction" text="Modify" />
                         <Button layoutX="50.0" layoutY="18.0" mnemonicParsing="false" onAction="#delPartButtAction" text="Delete" />
                      </buttons>
@@ -122,7 +122,7 @@
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                       <sortOrder>
-                          <fx:reference source="tablePartID"/>
+                          <fx:reference source="tablePartID" />
                       </sortOrder>
                   </TableView>
                </children>
