Controller now correctly passes Data around and updates tableView to match

--- a/src/View_Controller/AddPart.fxml
+++ b/src/View_Controller/AddPart.fxml
@@ -108,12 +108,12 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="addPartName" promptText="Part Name" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                  <TextField fx:id="addPartPrice" promptText="Price/Cost" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-                  <TextField fx:id="addPartInv" promptText="Inv" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-                  <TextField disable="true" promptText="Auto-Gen Disabled" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                  <TextField fx:id="addPartMax" promptText="Max" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-                  <TextField fx:id="addPartMachID" promptText="Mach ID" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+                  <TextField fx:id="partName" promptText="Part Name" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <TextField fx:id="partPrice" promptText="Price/Cost" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+                  <TextField fx:id="partInv" promptText="Inv" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                  <TextField fx:id="partId" disable="true" promptText="Auto-Gen Disabled" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <TextField fx:id="partMax" promptText="Max" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+                  <TextField fx:id="partMachID" promptText="Mach ID" GridPane.columnIndex="2" GridPane.rowIndex="6" />
                   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="20.0" prefWidth="107.0" text="Max" textAlignment="CENTER" GridPane.rowIndex="5">
                      <font>
                         <Font size="14.0" />
@@ -125,13 +125,13 @@
                      </font>
                   </Label>
                   <Button mnemonicParsing="false" onAction="#saveButtAction" prefHeight="25.0" prefWidth="96.0" text="Save" GridPane.columnIndex="3" GridPane.rowIndex="7" />
-                  <TextField fx:id="addPartMin" prefWidth="149.0" promptText="Min" GridPane.columnIndex="4" GridPane.rowIndex="5" />
+                  <TextField fx:id="partMin" prefWidth="149.0" promptText="Min" GridPane.columnIndex="4" GridPane.rowIndex="5" />
                   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="20.0" prefWidth="110.0" text="Min" textAlignment="CENTER" GridPane.columnIndex="3" GridPane.rowIndex="5">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Button mnemonicParsing="false" onAction="#cancelPartButtAction" prefHeight="25.0" prefWidth="96.0" text="Cancel" GridPane.columnIndex="4" GridPane.rowIndex="7" />
+                  <Button mnemonicParsing="false" onAction="#exitWindow" prefHeight="25.0" prefWidth="96.0" text="Cancel" GridPane.columnIndex="4" GridPane.rowIndex="7" />
                </children>
             </GridPane>
       </children>
