--- a/src/View_Controller/AddProduct.fxml
+++ b/src/View_Controller/AddProduct.fxml
@@ -73,9 +73,9 @@
                     <fx:reference source="tablePartID" />
                 </sortOrder>
             </TableView>
-          <TableView fx:id="asociatedPartsTable" layoutX="780.0" layoutY="360.0" prefHeight="200.0" prefWidth="381.0">
+          <TableView fx:id="associatedPartsTable" layoutX="780.0" layoutY="360.0" prefHeight="200.0" prefWidth="381.0">
               <columns>
-                  <TableColumn fx:id="asociatedPartID" prefWidth="75.0" text="Part ID" />
+                  <TableColumn fx:id="associatedPartID" prefWidth="75.0" text="Part ID" />
                   <TableColumn fx:id="asociatedPartName" prefWidth="75.0" text="Part Name" />
                   <TableColumn fx:id="asociatedPartInv" prefWidth="75.0" text="Inventory Level" />
                   <TableColumn fx:id="asociatedPartPrice" prefWidth="75.0" text="Price per Unit" />
@@ -127,7 +127,7 @@
                   </Label>
                   <Button mnemonicParsing="false" prefHeight="36.0" prefWidth="175.0" text="Search" GridPane.columnIndex="6" GridPane.rowIndex="1" />
                   <Button mnemonicParsing="false" prefHeight="36.0" prefWidth="175.0" text="Delete" GridPane.columnIndex="7" GridPane.rowIndex="11" />
-                  <Button mnemonicParsing="false" prefHeight="36.0" prefWidth="175.0" text="Save" GridPane.columnIndex="6" GridPane.rowIndex="12" />
+                  <Button mnemonicParsing="false" onAction="#addProductButtAction" prefHeight="36.0" prefWidth="175.0" text="Save" GridPane.columnIndex="6" GridPane.rowIndex="12" />
                   <Button mnemonicParsing="false" onAction="#exitWindow" prefHeight="36.0" prefWidth="175.0" text="Cancel" GridPane.columnIndex="7" GridPane.rowIndex="12" />
                   <Button mnemonicParsing="false" prefHeight="36.0" prefWidth="175.0" text="Add" GridPane.columnIndex="7" GridPane.rowIndex="6" />
                   <TextField GridPane.columnIndex="7" GridPane.rowIndex="1" />
@@ -136,12 +136,12 @@
                   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="177.0" text="Inv" GridPane.rowIndex="5" />
                   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="177.0" text="Price" GridPane.rowIndex="6" />
                   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="177.0" text="Max" GridPane.rowIndex="7" />
-                  <TextField disable="true" prefHeight="45.0" prefWidth="154.0" promptText="Auto Gen-Disabled" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <TextField prefHeight="45.0" prefWidth="154.0" promptText="Product Name" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                  <TextField prefHeight="25.0" prefWidth="50.0" promptText="Inv" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                  <TextField promptText="Price" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                  <TextField promptText="Max" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                  <TextField promptText="Min" GridPane.columnIndex="3" GridPane.rowIndex="7" />
+                  <TextField fx:id="productId" disable="true" prefHeight="45.0" prefWidth="154.0" promptText="Auto Gen-Disabled" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <TextField fx:id="productName" prefHeight="45.0" prefWidth="154.0" promptText="Product Name" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <TextField fx:id="productInv" prefHeight="25.0" prefWidth="50.0" promptText="Inv" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <TextField fx:id="productPrice" promptText="Price" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                  <TextField fx:id="productMax" promptText="Max" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                  <TextField fx:id="productMin" promptText="Min" GridPane.columnIndex="3" GridPane.rowIndex="7" />
                   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="177.0" text="Min" GridPane.columnIndex="2" GridPane.rowIndex="7" />
                </children>
             </GridPane>
