--- a/src/View_Controller/ModProduct.fxml
+++ b/src/View_Controller/ModProduct.fxml
@@ -73,9 +73,9 @@
                         <fx:reference source="tablePartID" />
                     </sortOrder>
                 </TableView>
-                <TableView fx:id="asociatedPartsTable" layoutX="780.0" layoutY="360.0" prefHeight="200.0" prefWidth="381.0">
+                <TableView fx:id="associatedPartsTable" layoutX="780.0" layoutY="360.0" prefHeight="200.0" prefWidth="381.0">
                     <columns>
-                        <TableColumn fx:id="asociatedPartID" prefWidth="75.0" text="Part ID" />
+                        <TableColumn fx:id="associatedPartID" prefWidth="75.0" text="Part ID" />
                         <TableColumn fx:id="asociatedPartName" prefWidth="75.0" text="Part Name" />
                         <TableColumn fx:id="asociatedPartInv" prefWidth="75.0" text="Inventory Level" />
                         <TableColumn fx:id="asociatedPartPrice" prefWidth="75.0" text="Price per Unit" />
