--- a/src/View_Controller/AddProduct.fxml
+++ b/src/View_Controller/AddProduct.fxml
@@ -61,17 +61,14 @@
       <children>
             <TableView fx:id="partsTable" layoutX="780.0" layoutY="120.0" prefHeight="200.0" prefWidth="381.0">
                 <columns>
-                    <TableColumn fx:id="tablePartID" prefWidth="75.0" text="Part ID" />
-                    <TableColumn fx:id="tablePartName" prefWidth="75.0" text="Part Name" />
-                    <TableColumn fx:id="tablePartInv" prefWidth="75.0" text="Inventory Level" />
-                    <TableColumn fx:id="tablePartPrice" prefWidth="75.0" text="Price per Unit" />
+                    <TableColumn fx:id="availablePartsID" prefWidth="75.0" text="Part ID" />
+                    <TableColumn fx:id="availablePartsName" prefWidth="75.0" text="Part Name" />
+                    <TableColumn fx:id="availablePartsInv" prefWidth="75.0" text="Inventory Level" />
+                    <TableColumn fx:id="availablePartsPrice" prefWidth="75.0" text="Price per Unit" />
                 </columns>
                 <columnResizePolicy>
                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                 </columnResizePolicy>
-                <sortOrder>
-                    <fx:reference source="tablePartID" />
-                </sortOrder>
             </TableView>
           <TableView fx:id="associatedPartsTable" layoutX="780.0" layoutY="360.0" prefHeight="200.0" prefWidth="381.0">
               <columns>
@@ -83,9 +80,6 @@
               <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
               </columnResizePolicy>
-              <sortOrder>
-                  <fx:reference source="tablePartID" />
-              </sortOrder>
           </TableView>
             <GridPane layoutX="27.0" layoutY="25.0" prefHeight="630.0" prefWidth="1222.0" style="-fx-border-color: black;">
               <columnConstraints>
@@ -125,12 +119,12 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <Button mnemonicParsing="false" prefHeight="36.0" prefWidth="175.0" text="Search" GridPane.columnIndex="6" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="36.0" prefWidth="175.0" text="Delete" GridPane.columnIndex="7" GridPane.rowIndex="11" />
+                  <Button mnemonicParsing="false" onAction="#searchAvailablePartsButton" prefHeight="36.0" prefWidth="175.0" text="Search" GridPane.columnIndex="6" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" onAction="#delAssociatedPart" prefHeight="36.0" prefWidth="175.0" text="Delete" GridPane.columnIndex="7" GridPane.rowIndex="11" />
                   <Button mnemonicParsing="false" onAction="#addProductButtAction" prefHeight="36.0" prefWidth="175.0" text="Save" GridPane.columnIndex="6" GridPane.rowIndex="12" />
                   <Button mnemonicParsing="false" onAction="#exitWindow" prefHeight="36.0" prefWidth="175.0" text="Cancel" GridPane.columnIndex="7" GridPane.rowIndex="12" />
-                  <Button mnemonicParsing="false" prefHeight="36.0" prefWidth="175.0" text="Add" GridPane.columnIndex="7" GridPane.rowIndex="6" />
-                  <TextField GridPane.columnIndex="7" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" onAction="#newAssociatedPart" prefHeight="36.0" prefWidth="175.0" text="Add" GridPane.columnIndex="7" GridPane.rowIndex="6" />
+                  <TextField fx:id="searchAvailableParts" GridPane.columnIndex="7" GridPane.rowIndex="1" />
                   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="177.0" text="ID" GridPane.rowIndex="3" />
                   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="177.0" text="Name" GridPane.rowIndex="4" />
                   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="177.0" text="Inv" GridPane.rowIndex="5" />
