--- a/src/Views/AddProduct.fxml
+++ b/src/Views/AddProduct.fxml
@@ -59,28 +59,6 @@
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefWidth="904.0" VBox.vgrow="ALWAYS">
       <children>
-            <TableView fx:id="partsTable" layoutX="780.0" layoutY="120.0" prefHeight="200.0" prefWidth="381.0">
-                <columns>
-                    <TableColumn fx:id="availablePartsID" prefWidth="75.0" text="Part ID" />
-                    <TableColumn fx:id="availablePartsName" prefWidth="75.0" text="Part Name" />
-                    <TableColumn fx:id="availablePartsInv" prefWidth="75.0" text="Inventory Level" />
-                    <TableColumn fx:id="availablePartsPrice" prefWidth="75.0" text="Price per Unit" />
-                </columns>
-                <columnResizePolicy>
-                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                </columnResizePolicy>
-            </TableView>
-          <TableView fx:id="associatedPartsTable" layoutX="780.0" layoutY="360.0" prefHeight="200.0" prefWidth="381.0">
-              <columns>
-                  <TableColumn fx:id="associatedPartID" prefWidth="75.0" text="Part ID" />
-                  <TableColumn fx:id="asociatedPartName" prefWidth="75.0" text="Part Name" />
-                  <TableColumn fx:id="asociatedPartInv" prefWidth="75.0" text="Inventory Level" />
-                  <TableColumn fx:id="asociatedPartPrice" prefWidth="75.0" text="Price per Unit" />
-              </columns>
-              <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-              </columnResizePolicy>
-          </TableView>
             <GridPane layoutX="27.0" layoutY="25.0" prefHeight="630.0" prefWidth="1222.0" style="-fx-border-color: black;">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -122,7 +100,7 @@
                   <Button mnemonicParsing="false" onAction="#searchAvailablePartsButton" prefHeight="36.0" prefWidth="175.0" text="Search" GridPane.columnIndex="6" GridPane.rowIndex="1" />
                   <Button mnemonicParsing="false" onAction="#delAssociatedPart" prefHeight="36.0" prefWidth="175.0" text="Delete" GridPane.columnIndex="7" GridPane.rowIndex="11" />
                   <Button mnemonicParsing="false" onAction="#addProductButtAction" prefHeight="36.0" prefWidth="175.0" text="Save" GridPane.columnIndex="6" GridPane.rowIndex="12" />
-                  <Button mnemonicParsing="false" onAction="#exitWindow" prefHeight="36.0" prefWidth="175.0" text="Cancel" GridPane.columnIndex="7" GridPane.rowIndex="12" />
+                  <Button mnemonicParsing="false" onAction="#cancelProduct" prefHeight="36.0" prefWidth="175.0" text="Cancel" GridPane.columnIndex="7" GridPane.rowIndex="12" />
                   <Button mnemonicParsing="false" onAction="#newAssociatedPart" prefHeight="36.0" prefWidth="175.0" text="Add" GridPane.columnIndex="7" GridPane.rowIndex="6" />
                   <TextField fx:id="searchAvailableParts" GridPane.columnIndex="7" GridPane.rowIndex="1" />
                   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="177.0" text="ID" GridPane.rowIndex="3" />
@@ -139,8 +117,29 @@
                   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="177.0" text="Min" GridPane.columnIndex="2" GridPane.rowIndex="7" />
                </children>
             </GridPane>
+            <TableView fx:id="availablePartsTable" layoutX="780.0" layoutY="120.0" prefHeight="200.0" prefWidth="381.0">
+                <columns>
+                    <TableColumn fx:id="availablePartsID" prefWidth="75.0" text="Part ID" />
+                    <TableColumn fx:id="availablePartsName" prefWidth="75.0" text="Part Name" />
+                    <TableColumn fx:id="availablePartsInv" prefWidth="75.0" text="Inventory Level" />
+                    <TableColumn fx:id="availablePartsPrice" prefWidth="75.0" text="Price per Unit" />
+                </columns>
+                <columnResizePolicy>
+                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                </columnResizePolicy>
+            </TableView>
+          <TableView fx:id="associatedPartsTable" layoutX="780.0" layoutY="360.0" prefHeight="200.0" prefWidth="381.0">
+              <columns>
+                  <TableColumn fx:id="associatedPartID" prefWidth="75.0" text="Part ID" />
+                  <TableColumn fx:id="associatedPartName" prefWidth="75.0" text="Part Name" />
+                  <TableColumn fx:id="associatedPartInv" prefWidth="75.0" text="Inventory Level" />
+                  <TableColumn fx:id="associatedPartPrice" prefWidth="75.0" text="Price per Unit" />
+              </columns>
+              <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+              </columnResizePolicy>
+          </TableView>
       </children>
     </AnchorPane>
-      <TextField />
   </children>
 </VBox>
